--- a/styes/portfolio.css
+++ b/styes/portfolio.css
@@ -23,6 +23,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 0px 200px;
 }
 
 nav>ul {
@@ -44,4 +45,19 @@ nav a {
     color: #181818;
     font-size: 45px;
     font-weight: 800;
+}
+/* header related style*/
+.header{
+    background-color: #FFF8F3;
+}
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+.banner .profile-pic{
+    width: 500px;
+}
+.banner-greeting{
+
 }
