--- a/styes/portfolio.css
+++ b/styes/portfolio.css
@@ -1,3 +1,6 @@
+*{
+    margin: 0px;
+}
 /* common shared styles */
 body {
     font-family: 'Open Sans';
@@ -23,7 +26,8 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 0px 200px;
+    margin: 0px 150px;
+    padding-top: 51px;
 }
 
 nav>ul {
@@ -49,15 +53,119 @@ nav a {
 /* header related style*/
 .header{
     background-color: #FFF8F3;
+    background-image: url("/images/header_bg.png");
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
-.banner{
-    padding: 30px 30px 30px 150px;
+.banner2{
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
-.banner .profile-pic{
+.banner2 .profile-pic{
     width: 500px;
 }
 .banner-greeting{
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0px;
+}
+.banner-title{
+    font-size: 85px;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+.banner-description{
+    width: 500px;
+}
+/* full banner */
+.dev-img{
+    position: absolute;
+    width: 90px;
+    padding-top: 25px;
+    padding-bottom: 15px;
+}
+.banner{
+    margin: 0px;
+}
+/* banner er kaj shesh */
 
+/* about me er kaj shuru */
+.about-me{
+    margin: 130px 230px;
+}
+.about-container{
+    background-color: #fef0e6;
+    border-radius: 20px;
+    padding: 131px 156px;
+}
+.about-header{
+    font-size: 35px;
+    font-weight: 700px;
+    text-align: center;
+    margin-bottom: 30px;
+}
+.about-description{
+    color: #757575;
+    text-align:center;
+    font-size: 15px;
+    font-weight: 200;
+    margin-bottom: 30px;
+}
+.personal-info{
+    display: flex;
+    justify-content: space-between;
+}
+.info{
+    font-size: 15px;
+    font-weight: 10;
+    text-align: center;
+}
+/* end of About Me */
+
+/* What I Do */
+.What-I-Do{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
+.What-text{
+    text-align: center;
+}
+.What-Desc{
+    text-align: center;
+    color: #757575;
+    width: 800px;
+    height: 90px;
+    margin-left: 300px;
+    margin-top: 30px;
+    margin-bottom: 50px;
+}
+/* Skills */
+.skills{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.box{
+    width: 230px;
+    border-radius: 10px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    margin-right: 27px;
+}
+.icon{
+    width: 35px;
+    padding: 25px 150px 30px 23px;
+}
+.box-head{
+    font-size: 17px;
+    font-weight: 700px;
+    margin-bottom: 30px;
+    margin-left: 23px;
+}
+.box-text{
+    color: #757575;
+    font-size: 16px;
+    font-weight: 200;
+    margin: 0px 23px 25px 23px;
 }
